--- a/index.html
+++ b/index.html
@@ -90,18 +90,20 @@
             }
 
             #selected-robot-card {
-                display: absolute;
-                justify-content: center; /* Centre horizontalement */
-                align-items: center;     /* Centre verticalement */
-                position: absolute;      /* Position absolue pour se centrer sur l'écran */
-                top: 50%;                /* Centre verticalement */
-                left: 50%;               /* Centre horizontalement */
+                position: absolute;
+                top: 30%;
+                left: 50%;
+                transform: translate(-50%, -50%);
                 width: 150px;
                 height: 150px;
                 background-color: #dddddd;
                 border: 2px solid #000000;
                 border-radius: 10px;
-                z-index: 10;             /* S'assure que la carte soit devant */
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                z-index: 100; /* Ensure it's above other elements */
                 box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
             }
 
@@ -274,24 +276,29 @@
                         // Ajouter un événement de clic sur la carte
                         robotCard.addEventListener('click', function() {
                             alert(`Connecté à ${robotData.name} avec l'IP ${robotData.ip}`);
+                            
                             // Cacher la grille des robots
                             document.getElementById('robot-grid').style.display = 'none';
+
                             // Afficher le panneau de contrôle après la sélection du robot
                             document.getElementById('control-panel').style.display = 'block';
+
                             // Afficher le bouton de retour
                             backButton.style.display = 'block';
-                            // Insérer la carte du robot sélectionné dans le nouveau div
-                            const selectedRobotCard = document.getElementById('selected-robot-card');
-                            selectedRobotCard.innerHTML = ''; // Vider pour éviter les doublons
 
-                            // Créer un clone de la carte du robot sélectionné pour l'afficher
-                            const clonedRobotCard = robotCard.cloneNode(true);
-                            clonedRobotCard.style.margin = "0";
-                            selectedRobotCard.appendChild(clonedRobotCard);
+                            // Insérer directement une nouvelle carte du robot sélectionné dans le div
+                            const selectedRobotCard = document.getElementById('selected-robot-card');
+                            selectedRobotCard.innerHTML = '';
+                                <div class="robot-card">
+                                    <div class="robot-name">${robotData.name}</div>
+                                    <div class="robot-ip">IP: ${robotData.ip}</div>
+                                </div>
+                            
 
                             // Afficher la carte du robot sélectionné
                             selectedRobotCard.style.display = 'block';
                         });
+
                     }
 
                     // Afficher la grille des robots après le chargement
