--- a/index.html
+++ b/index.html
@@ -276,29 +276,24 @@
                         // Ajouter un événement de clic sur la carte
                         robotCard.addEventListener('click', function() {
                             alert(`Connecté à ${robotData.name} avec l'IP ${robotData.ip}`);
-                            
                             // Cacher la grille des robots
                             document.getElementById('robot-grid').style.display = 'none';
-
                             // Afficher le panneau de contrôle après la sélection du robot
                             document.getElementById('control-panel').style.display = 'block';
-
                             // Afficher le bouton de retour
                             backButton.style.display = 'block';
-
-                            // Insérer directement une nouvelle carte du robot sélectionné dans le div
+                            // Insérer la carte du robot sélectionné dans le nouveau div
                             const selectedRobotCard = document.getElementById('selected-robot-card');
-                            selectedRobotCard.innerHTML = '';
+                            selectedRobotCard.innerHTML = `
                                 <div class="robot-card">
                                     <div class="robot-name">${robotData.name}</div>
                                     <div class="robot-ip">IP: ${robotData.ip}</div>
                                 </div>
-                            
+                            `;
 
                             // Afficher la carte du robot sélectionné
                             selectedRobotCard.style.display = 'block';
                         });
-
                     }
 
                     // Afficher la grille des robots après le chargement
