--- a/index.html
+++ b/index.html
@@ -145,39 +145,6 @@
                 opacity: 0.8; /* Effet de hover */
             }
 
-            /* Panneau de contrôle centré sous la carte sélectionnée */
-            #control-panel-container {
-                display: none; /* CACHER PAR DÉFAUT */
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                gap: 20px; /* Espacement entre la carte et le panneau de contrôle */
-                margin-top: 30px; /* Adjust if needed for distance between card and panel */
-            }
-
-            /* Le panneau de contrôle sera affiché sous la carte sélectionnée */
-            #control-panel {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-            }
-
-            /* Carte du robot sélectionné */
-            #selected-robot-card { 
-                display: flex;
-                width: 150px;
-                background-color: #e4e4e4;
-                border: 2px solid #000000;
-                border-radius: 10px;
-                padding: 15px;
-                box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-            }
-
         </style>
     </head>
      
@@ -217,9 +184,8 @@
             <!-- Les cartes des robots seront insérées ici -->
         </div>
 
-       <!-- Conteneur de la carte sélectionnée et du panneau de contrôle -->
-       <div id="control-panel-container">
-        <div id="selected-robot-card">
+        <!-- Carte du robot sélectionné (affichée après sélection) -->
+        <div id="selected-robot-card" style="display: none; margin: 0 auto; width: 150px;">
             <!-- La carte du robot sera insérée ici -->
         </div>
 
@@ -293,11 +259,10 @@
                         // Ajouter un événement de clic sur la carte
                         robotCard.addEventListener('click', function() {
                             alert(`Connecté à ${robotData.name} avec l'IP ${robotData.ip}`);
-
                             // Cacher la grille des robots
                             document.getElementById('robot-grid').style.display = 'none';
                             // Afficher le panneau de contrôle après la sélection du robot
-                            document.getElementById('control-panel-container').style.display = 'flex';
+                            document.getElementById('control-panel').style.display = 'block';
                             // Afficher le bouton de retour
                             backButton.style.display = 'block';
                             // Insérer la carte du robot sélectionné dans le nouveau div
@@ -307,6 +272,9 @@
                             // Créer un clone de la carte du robot sélectionné pour l'afficher
                             const clonedRobotCard = robotCard.cloneNode(true);
                             selectedRobotCard.appendChild(clonedRobotCard);
+
+                            // Afficher la carte du robot sélectionné
+                            selectedRobotCard.style.display = 'block';
                         });
                     }
 
