--- a/index.html
+++ b/index.html
@@ -146,19 +146,7 @@
             }
 
             #selected-robot-card {
-                background-color: #dddddd;
-                border: 2px solid #000000;
-                border-radius: 10px;
-                padding: 20px;
-                width: 150px;
-                height: 150px;
-                display: none;
-                position: fixed; /* Ensure it's fixed on the screen */
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%); /* Center it both horizontally and vertically */
-                box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
-                z-index: 1000; /* Make sure it's above other elements */
+                margin-left: -45px;
             }
 
         </style>
